# record_vedio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  baudio.h  bvedio.cpp  bvedio.h  dx_capture.hpp  encodeAudio.h  threadPool.hpp  utils.hpp  vedio_.cpp
